chore: 프로젝트 초기설정(패키지 설치, 폴더 구조)

--- a/104-front/tsconfig.json
+++ b/104-front/tsconfig.json
@@ -1,4 +1,15 @@
 {
+  "types": ["node"],
+  "compilerOptions": {
+    "baseUrl": ".",
+
+    "paths": {
+      "@/*": ["src/*"],
+      "@components/*": ["src/components/*"],
+      "@styles/*": ["src/styles/*"],
+      "@assets/*": ["src/assets/*"] // 추가
+    }
+  },
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
