--- a/104-front/package.json
+++ b/104-front/package.json
@@ -20,6 +20,7 @@
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
